--- a/src/components/About.css
+++ b/src/components/About.css
@@ -3,7 +3,8 @@
   background: url('../image/about.jpg') center center / cover no-repeat;
   padding: 80px 20px;
   text-align: center;
-  height: max-content;
+  /* height: max-content; */
+  height: fit-content;
   color: rgba(255, 255, 255, 0.85);
   display: flex;
   flex-direction: column;
