--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,4 +1,4 @@
-.about-section {
+/* .about-section {
   min-height: 100vh;
   width: 100%;
   background: url('../image/about.jpg') center center / cover no-repeat;
@@ -42,7 +42,108 @@
   line-height: 1.8;
   margin-bottom: 2rem;
   color: #f5f5f5;
+} */
+
+.about-section {
+  position: relative;
+  background: url('../image/about.jpg') center center / cover no-repeat;
+  padding: 100px 40px;
+  color: #fff;
+  text-align: center;
+  overflow: hidden;
 }
+
+.about-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 0;
+}
+
+.about-content {
+  position: relative;
+  z-index: 1;
+  max-width: 900px;
+  margin: auto;
+}
+
+.about-content h2 {
+  font-size: 2.5rem;
+  color: #ffce00;
+  margin-bottom: 2rem;
+}
+
+
+.about-lines {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  margin-top: 1rem;
+}
+
+.line {
+  position: relative;
+  font-size: 1.2rem;
+  padding: 1rem 2rem;
+  border-radius: 12px;
+  background-color: rgba(255, 255, 255, 0.05);
+  max-width: 85%;
+  color: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(4px);
+  border-left: 5px solid #ffce00;
+}
+
+.line.left {
+  align-self: flex-start;
+  border-left-color: #ffce00;
+  animation: slideInLeft 1s ease;
+}
+
+.line.left:hover{
+  transform: scale(1.05);
+  
+  box-shadow: 0 0 30px #ffce00;
+}
+
+
+.line.right {
+  align-self: flex-end;
+  border-left-color: #00d4ff;
+  animation: slideInRight 1s ease;
+}
+
+.line.right:hover{
+  transform: scale(1.05);
+  
+  box-shadow: 0 0 30px #00d4ff;
+}
+
+/* Animations */
+@keyframes slideInLeft {
+  from {
+    transform: translateX(-50px);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideInRight {
+  from {
+    transform: translateX(50px);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
 
 
 /* Responsive */
