--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -105,6 +105,14 @@
   text-align: center;
   box-shadow: 0 4px 8px rgba(0,0,0,0.2);
 }
+.skills-category:hover
+{
+    border-radius: 16px 16px 0 0;
+
+  transform: scale(1.05);
+    box-shadow: 0 0 40px rgba(240, 219, 79, 0.9);
+}
+
 
 /* Skills scroll area */
 .skills-category-items {
