--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -8,7 +8,7 @@
   text-align: center;
   font-size: 2.5rem;
   margin-bottom: 3rem;
-  color: #d0ed10;
+  color: #ffce00;
   font-weight: bold;
 }
 
@@ -34,7 +34,9 @@
   width: 50%;
   padding: 2rem 3rem;
   box-sizing: border-box;
-  animation: slideIn 0.8s ease;
+  opacity: 0; /* start hidden */
+  transform: translateY(40px); /* base hidden position */
+  transition: opacity 0.6s ease, transform 0.6s ease;
 }
 
 .timeline-item.left {
@@ -45,6 +47,36 @@
 .timeline-item.right {
   left: 50%;
   text-align: left;
+}
+
+.timeline-item.left.animate {
+  animation: left-side 2s ease forwards;
+}
+
+.timeline-item.right.animate {
+  animation: right-side 2s ease forwards;
+}
+
+@keyframes left-side {
+  0% {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0%);
+  }
+}
+
+@keyframes right-side {
+  0% {
+    opacity: 0;
+    transform: translateX(100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0%);
+  }
 }
 
 .timeline-item .dot {
@@ -94,6 +126,7 @@
 
 .timeline-item .content:hover {
   transform: scale(1.03);
+  box-shadow: 0 0 30px #a9d713;
 }
 
 .timeline-item h3 {
@@ -128,18 +161,6 @@
 .github-link:hover {
   color: #4b42d1;
   transform: scale(1.05);
-}
-
-/* Animations */
-@keyframes slideIn {
-  from {
-    opacity: 0;
-    transform: translateY(40px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
 }
 
 /* Mobile Responsive */
