--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -35,10 +35,24 @@
   transition: transform 0.3s ease-in-out;
   transform: scale(1.05);
   box-shadow: 0 0 30px #ffce00;
+  animation: animation 2s infinite;
+}
+
+@keyframes animation {
+  0% {
+    transform: scale(0.5);
+  }
+
+  100% {
+    transform: scale(1.05);
+    box-shadow: 0 0 30px #ffce00;
+
+  }
 }
 
 .profile-pic:hover {
   transform: scale(1.05);
+  animation: push;
   box-shadow: 0 0 30px #1ddbf0;
 }
 
