--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -19,9 +19,26 @@
   font-size: 1.5rem;
   font-weight: bold;
   color: inherit;
+  display: flex;
+  align-items: center;
+  gap: 10px;
   transition: color 0.4s ease;
 
 }
+.navbar-profile-img {
+  height: 50px;
+  width: 50px;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 2px solid #fff;
+}
+.navbar-profile-img:hover
+{
+  transform: scale(1.05);
+    box-shadow: 0 0 40px #d1ac1c;
+
+}
+
 .navbar-a{
   color: white;
 }
@@ -63,10 +80,10 @@
   /* color: white; */
 }
 
-.navbar.scrolled .navbar-logo,
+/* .navbar.scrolled .navbar-logo,
 .navbar.scrolled .navbar-links li a {
-  /* color: white; */
-}
+  color: white;
+} */
 
 /* Hamburger toggle */
 .navbar-toggle {
