--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 /* Reset some default browser styles */
-body, html {
+body,
+html {
   margin: 0;
   padding: 0;
   font-family: 'Poppins', sans-serif;
@@ -12,9 +13,11 @@ body, html {
 ::-webkit-scrollbar {
   width: 8px;
 }
+
 ::-webkit-scrollbar-track {
   background: #f1f1f1;
 }
+
 ::-webkit-scrollbar-thumb {
   background-color: #6c63ff;
   border-radius: 10px;
