--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -34,8 +34,10 @@
   width: 50%;
   padding: 2rem 3rem;
   box-sizing: border-box;
-  opacity: 0; /* start hidden */
-  transform: translateY(40px); /* base hidden position */
+  opacity: 0;
+  /* start hidden */
+  transform: translateY(40px);
+  /* base hidden position */
   transition: opacity 0.6s ease, transform 0.6s ease;
 }
 
@@ -62,6 +64,7 @@
     opacity: 0;
     transform: translateX(-100%);
   }
+
   100% {
     opacity: 1;
     transform: translateX(0%);
@@ -73,6 +76,7 @@
     opacity: 0;
     transform: translateX(100%);
   }
+
   100% {
     opacity: 1;
     transform: translateX(0%);
@@ -125,14 +129,15 @@
   animation: animations 2s infinite;
 }
 
-@keyframes animations{
-  0%{
+@keyframes animations {
+  0% {
     transform: scale(1);
-    
+
 
   }
-  100%{
-    transform: scale(1.03);  
+
+  100% {
+    transform: scale(1.03);
     box-shadow: 0 0 30px #a9d713;
   }
 }
@@ -175,7 +180,7 @@
 .github-link:hover {
   color: #4b42d1;
   transform: scale(1.06);
-  
+
 
 }
 
@@ -205,5 +210,5 @@
   .timeline-item.right {
     left: 0;
   }
-  
+
 }
